# Slide

demo/DemoSlide/: demo.html
demo/LuaModule/: Makefile  Package.swift  README.md  script.lua
demo/LuaModule/Sources/Lua/include/: module.modulemap  umbrella.h
demo/LuaModule/Sources/Yume/: main.swift
demo/LuaModule/Tests/: LinuxMain.swift
demo/LuaModule/Tests/LuaModuleTests/: LuaModuleTests.swift
demo/ModuleMap/ModuleMap/: main.swift
demo/ModuleMap/ModuleMap.xcodeproj/: project.pbxproj
demo/ModuleMap/ModuleMap.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/ModuleMap/ModuleMap.xcodeproj/project.xcworkspace/xcuserdata/yume.xcuserdatad/: UserInterfaceState.xcuserstate
demo/ModuleMap/ModuleMap.xcodeproj/xcuserdata/yume.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/ModuleMap/Yume/: CMakeLists.txt  Makefile  libyume.dylib  module.modulemap
demo/Part 1/: Makefile  cHello1.c  cHello2.c  hello  hello.swift  helloFlag  helloFlag.swift
demo/elfDump/ELF/: module.modulemap
demo/elfDump/ModuleMap/: abc.h  main.swift
demo/elfDump/ModuleMap.xcodeproj/: project.pbxproj
demo/elfDump/ModuleMap.xcodeproj/project.xcworkspace/xcuserdata/yume.xcuserdatad/: UserInterfaceState.xcuserstate
demo/elfDump/c/: Makefile  ch2-1.c
demo/swift_interact_with_c/: Makefile
demo/swift_interact_with_c/c_call_swift/: c_main  c_main.c  swift_add  swift_add.swift
demo/swift_interact_with_c/swift_call_c/: c_hello.c  swift_main  swift_main.swift
demo2/Slide/: slide.html
(+1 files in other folders)
